# audio-qa-app

./: .audio_qa_config.json  .dockerignore  .env  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
detection_results/example_YYYY-MM-DD_HH-MM-SS/: example_report.json
experimenting/: audio-testing.ipynb  clipdetect-testing.ipynb  distortion_testing.ipynb  distrotion_testing.ipynb  loudness-testing.ipynb  try_stuff.ipynb
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AudioDirSelector.css  AudioDirSelector.js  FileDetailView.css  FileDetailView.js  FileUpload.css  FileUpload.js  Gallery.css  Gallery.js  ProcessFiles.css  ProcessFiles.js  QueueProgressBar.css  QueueProgressBar.js
frontend/src/services/: api.js
frontend/src/utils/: export.js
scripts/: docker-entrypoint.sh  start_all.ps1  start_all.sh  start_api.ps1  start_api.sh  start_api_win.ps1  start_api_win.sh  start_queue_cli.sh  start_worker.sh  stop_all.ps1  stop_all.sh
src/: api_server.py
src/audio_processing/: README.md  __init__.py  artifact_simulate.py  audio_import.py  distortion_detection.py  distortion_detector.py  distortion_detector_hazel.py  loudness.py  loudness_normal.py  squim_detector.py  utils.py
src/console-app/: distortion_detector.py  main.py
src/console_app/: main.py
src/job_queue/: __init__.py  analysis_types.py  api_server.py  queue.py  queue_cli.py  worker.py
